--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.12.2",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.4.0",
 		"cookie-parser": "^1.4.6",
@@ -21,6 +22,7 @@
 		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.5.3",
+		"paymongo-node": "^10.17.0",
 		"stripe": "^16.8.0"
 	},
 	"devDependencies": {
