--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"mongoose": "^8.5.3",
 		"nodemailer": "^7.0.6",
 		"paymongo-node": "^10.17.0",
-		"stripe": "^16.12.0"
+		"stripe": "^16.12.0",
+		"twilio": "^5.10.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
