--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"nodemailer": "^7.0.6",
 		"paymongo-node": "^10.17.0",
 		"sonner": "^2.0.7",
-		"stripe": "^16.12.0"
+		"stripe": "^16.12.0",
+		"twilio": "^5.10.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
