--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.5.3",
+		"multer": "^2.0.2",
 		"paymongo-node": "^10.17.0",
 		"stripe": "^16.12.0"
 	},
