--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"html2canvas": "^1.4.1",
 		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
+		"jspdf": "^3.0.3",
 		"mongoose": "^8.5.3",
 		"paymongo-node": "^10.17.0",
 		"stripe": "^16.12.0"
