--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"jspdf": "^3.0.3",
 		"mongoose": "^8.5.3",
+		"multer": "^2.0.2",
 		"paymongo-node": "^10.17.0",
 		"stripe": "^16.12.0"
 	},
