--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"node-fetch": "^3.3.2",
 		"nodemailer": "^7.0.6",
 		"paymongo-node": "^10.17.0",
-		"stripe": "^16.12.0"
+		"stripe": "^16.12.0",
+		"uuid": "^13.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
